--- a/css/styles.css
+++ b/css/styles.css
@@ -7,20 +7,27 @@ html {
   font-size: 62.5%;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
 }
 
-h1, h2, h3, h4, p {
+h1,
+h2,
+h3,
+h4,
+p {
   margin-bottom: 0;
 }
 
 body {
+  background: url("../images/bg-intro-desktop.png"), #ff7a7a;
   line-height: 1.6;
   font-size: 1.6rem;
   margin: 0;
-  background: #38cc8c;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,16 +37,33 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Poppins", arial, sans-serif;
+}
+
+.title--wrap {
+  outline: solid black 2px;
+  width: 500px;
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-family: "Poppins", arial, sans-serif;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1em;
 }
 
-@media screen and (max-width: 414px) {
-  body {
-    background: #ff7a7a;
-  }
+.form--wrap {
+  width: 500px;
+  height: 600px;
+  outline: solid black 2px;
 }
 /*# sourceMappingURL=styles.css.map */
