--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -19,7 +19,7 @@ $colors: (
 
 // ---------------------------------media query mixins-------------------------------------------------
 @mixin mobileSize {
-    @media screen and (max-width: 414px) {
+    @media screen and (max-width: 800px) {
         @content;
     }
 }
@@ -33,3 +33,4 @@ $colors: (
 // --------------------------------------variables------------------------------------------------------
 $font-stack: "Poppins", arial, sans-serif;
 $padding: 1em;
+$boxShadow: 0 5px 10px rgba(0, 0, 0, 0.411);
