--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,10 @@
   background: white;
 }
 
+.form-control .input--wrap.color {
+  outline: #ff7a7a solid 2px;
+}
+
 .form-control input {
   width: 100%;
   height: 100%;
@@ -71,12 +75,16 @@
   display: none;
 }
 
+.form-control .display {
+  display: block;
+}
+
 .form--wrap .form__banner {
   background: #6055a5;
   color: white;
   text-align: center;
   padding: 0.75em;
-  border-radius: 5px;
+  border-radius: 10px;
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.411);
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.411);
 }
@@ -88,7 +96,7 @@
   height: 100%;
   margin-top: 1em;
   padding: 2em 2em 1em 2em;
-  border-radius: 5px 5px 0 0;
+  border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,12 +114,11 @@
 
 .form-footer {
   background: white;
-  border-radius: 0 0 5px 5px;
   text-align: center;
   width: 100%;
 }
 
-.form-footer .trial-btn {
+.form-footer #trial-btn {
   background: #38cc8c;
   border: none;
   padding: 1em;
@@ -122,7 +129,7 @@
   cursor: pointer;
 }
 
-.form-footer .trial-btn:hover {
+.form-footer #trial-btn:hover {
   background: #71d0a7;
 }
 
@@ -187,7 +194,7 @@ body {
 
 .title--wrap,
 .form--wrap {
-  max-width: 500px;
+  max-width: 525px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
