--- a/styles/_form.scss
+++ b/styles/_form.scss
@@ -16,6 +16,10 @@
         outline: color(neutral-GrayishBlue) solid 2px;
         border-radius: 5px;
         background: white;
+
+        &.color {
+            outline: color(primary-red) solid 2px;
+        }
     }
 
     input {
@@ -44,6 +48,10 @@
         padding: 0 1em 0 0;
         display: none;
     }
+
+    .display {
+        display: block;
+    }
 }
 
 .form--wrap {
@@ -52,7 +60,7 @@
         color: white;
         text-align: center;
         padding: 0.75em;
-        border-radius: 5px;
+        border-radius: 10px;
         box-shadow: $boxShadow;
     }
 
@@ -62,19 +70,19 @@
         height: 100%;
         margin-top: 1em;
         padding: 2em 2em 1em 2em;
-        border-radius: 5px 5px 0 0;
+        border-radius: 10px;
         @include flexCenter(column);
     }
 }
 
 .form-footer {
     background: white;
-    border-radius: 0 0 5px 5px;
+
     text-align: center;
     // padding: 0 2em 1em 2em;
     width: 100%;
 
-    .trial-btn {
+    #trial-btn {
         background: color(primary-green);
         border: none;
         padding: 1em;
